feat : using ScopedValue instead of ThreadLocal