@@ -12,28 +12,19 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 import com.example.multitenancy.schema.common.AbstractIntegrationTest;
-import com.example.multitenancy.schema.config.multitenancy.TenantIdentifierResolver;
 import com.example.multitenancy.schema.domain.request.CustomerDto;
 import com.example.multitenancy.schema.entities.Customer;
-import com.example.multitenancy.schema.repositories.CustomerRepository;
 import java.util.ArrayList;
 import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 
 @DisplayName("Customer Controller Integration Tests")
 class CustomerControllerIT extends AbstractIntegrationTest {
-
-    @Autowired
-    private CustomerRepository customerRepository;
-
-    @Autowired
-    private TenantIdentifierResolver tenantIdentifierResolver;
 
     private static final String TENANT_1 = "test1";
     private static final String TENANT_2 = "test2";
@@ -46,17 +37,17 @@ class CustomerControllerIT extends AbstractIntegrationTest {
     }
 
     private void cleanupTenant(String tenantId) {
-        tenantIdentifierResolver.setCurrentTenant(tenantId);
-        customerRepository.deleteAll();
+        tenantIdentifierResolver.runWithTenant(tenantId, customerRepository::deleteAll);
     }
 
     private List<Customer> createTestCustomersForTenant(String tenantId, String... customerNames) {
-        tenantIdentifierResolver.setCurrentTenant(tenantId);
-        List<Customer> customers = new ArrayList<>();
-        for (String name : customerNames) {
-            customers.add(new Customer().setName(name));
-        }
-        return customerRepository.saveAll(customers);
+        return tenantIdentifierResolver.withTenant(tenantId, () -> {
+            List<Customer> customers = new ArrayList<>();
+            for (String name : customerNames) {
+                customers.add(new Customer().setName(name));
+            }
+            return customerRepository.saveAll(customers);
+        });
     }
 
     @Nested
@@ -158,17 +149,16 @@ class CustomerControllerIT extends AbstractIntegrationTest {
                     .andExpect(jsonPath("$.name", is("New Customer")));
 
             // Verify customer was created in tenant1
-            tenantIdentifierResolver.setCurrentTenant(TENANT_1);
-            List<Customer> customers = customerRepository.findAll();
+            List<Customer> customers = tenantIdentifierResolver.withTenant(TENANT_1, customerRepository::findAll);
             assertThat(customers).hasSize(1);
-            assertThat(customers.get(0).getName()).isEqualTo("New Customer");
+            assertThat(customers.getFirst().getName()).isEqualTo("New Customer");
         }
 
         @Test
         @DisplayName("Should update customer for tenant1")
         void shouldUpdateCustomerForTenant1() throws Exception {
             List<Customer> customers = createTestCustomersForTenant(TENANT_1, "Original Customer");
-            Customer customer = customers.get(0);
+            Customer customer = customers.getFirst();
             CustomerDto updateDto = new CustomerDto("Updated Customer");
 
             mockMvc.perform(put("/api/customers/{id}", customer.getId())
@@ -179,9 +169,9 @@ class CustomerControllerIT extends AbstractIntegrationTest {
                     .andExpect(jsonPath("$.name", is("Updated Customer")));
 
             // Verify customer was updated in tenant1
-            tenantIdentifierResolver.setCurrentTenant(TENANT_1);
-            Customer updatedCustomer =
-                    customerRepository.findById(customer.getId()).orElseThrow();
+            Customer updatedCustomer = tenantIdentifierResolver.withTenant(
+                    TENANT_1,
+                    () -> customerRepository.findById(customer.getId()).orElseThrow());
             assertThat(updatedCustomer.getName()).isEqualTo("Updated Customer");
         }
 
@@ -196,8 +186,9 @@ class CustomerControllerIT extends AbstractIntegrationTest {
                     .andExpect(jsonPath("$.name", is("Customer to Delete")));
 
             // Verify customer was deleted from tenant1
-            tenantIdentifierResolver.setCurrentTenant(TENANT_1);
-            assertThat(customerRepository.findById(customer.getId())).isEmpty();
+            assertThat(tenantIdentifierResolver.withTenant(
+                            TENANT_1, () -> customerRepository.findById(customer.getId())))
+                    .isEmpty();
         }
     }
 
@@ -240,8 +231,7 @@ class CustomerControllerIT extends AbstractIntegrationTest {
                     .andExpect(jsonPath("$.name", is("New Tenant2 Customer")));
 
             // Verify customer was created in tenant2
-            tenantIdentifierResolver.setCurrentTenant(TENANT_2);
-            List<Customer> customers = customerRepository.findAll();
+            List<Customer> customers = tenantIdentifierResolver.withTenant(TENANT_2, customerRepository::findAll);
             assertThat(customers).hasSize(1);
             assertThat(customers.get(0).getName()).isEqualTo("New Tenant2 Customer");
         }
@@ -261,9 +251,9 @@ class CustomerControllerIT extends AbstractIntegrationTest {
                     .andExpect(jsonPath("$.name", is("Updated Tenant2 Customer")));
 
             // Verify customer was updated in tenant2
-            tenantIdentifierResolver.setCurrentTenant(TENANT_2);
-            Customer updatedCustomer =
-                    customerRepository.findById(customer.getId()).orElseThrow();
+            Customer updatedCustomer = tenantIdentifierResolver.withTenant(
+                    TENANT_2,
+                    () -> customerRepository.findById(customer.getId()).orElseThrow());
             assertThat(updatedCustomer.getName()).isEqualTo("Updated Tenant2 Customer");
         }
 
@@ -278,8 +268,9 @@ class CustomerControllerIT extends AbstractIntegrationTest {
                     .andExpect(jsonPath("$.name", is("Tenant2 Customer to Delete")));
 
             // Verify customer was deleted from tenant2
-            tenantIdentifierResolver.setCurrentTenant(TENANT_2);
-            assertThat(customerRepository.findById(customer.getId())).isEmpty();
+            assertThat(tenantIdentifierResolver.withTenant(
+                            TENANT_2, () -> customerRepository.findById(customer.getId())))
+                    .isEmpty();
         }
     }
 
